# parkhaus

./: .env  .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix
.github/workflows/: build.yml  test.yml
.sqlx/: query-66d247b0aa0ce72fae6ccff9ec0ba298c29b3b66fe27edcbfde10a1e640fad9a.json  query-76601d7bd4d02efc003cfdae89a14274f801d1d1213323566f2c75a48036cf73.json  query-87d5c5079e5e0f37bb1b21d7b44ee77b0cfaedc165df61afc92dd71c619c1f12.json  query-a327b2402c16d2fd91ae4761d50ed3036d192a07da28c76cfdeea6339227caf1.json  query-b48c3345cd93e5d8479ef721e0a41e07f57765ff26681257b1aee74fbe86d72e.json  query-b634a358007db9c46a68019e3c6250cb351390742b7467bf51ca4f18bab38625.json  query-bcbf421e43d8754bd9481d4e70a923d578f7b6ba05cc42540ce586f5a8b30bc5.json  query-d49d87dd3fe6b7d0b8af75abfebe5af353ee22b37652083d3c84ca9a5a435439.json
crates/parkhaus/: Cargo.toml
crates/server/: Cargo.toml
crates/server/.sqlx/: query-495ece2e2520d0738a35c989f2055c44864712e41f3fba4b996568052fb3b800.json  query-61728e6edec8d1454e4c7749146b263364d9adcd2eeff94fd3288b5284adb2ce.json  query-646dcb78b1fd23745e50fd9a6b3bc35c29853f0e86a799afda07853fb3dfb1ca.json  query-8274d235509cc2b6d6962890e6cd2f5d4d6cd88a0617332112a799b5691fbb56.json  query-ae95f460d7cac644ef52a8bb2b498f6453f4b763eda99d9bae41390993e8933e.json  query-bfde9ded41b1df4e2024608427af6698902dd4f53ad1e67ea3048be7ba9c2274.json  query-e2c3ae832020823a5fd1d51da2483963ac28bd2fd6e982f44f54d0ab84afa2d7.json
crates/server/src/: config.rs  data.rs  endpoints.rs  error.rs  import.rs  lib.rs  metrics.rs  migrate.rs
crates/server/src/db/: migrate.rs
crates/server/src/s3_client/: client.rs
crates/server/tests/: client.rs  import.rs  migrate.rs
integration-tests/: e2e.py  tiering_migration_e2e.py
migrations/: 20260301180918_Initial_schema.sql
scripts/: bucket_lifecycle_test.py  smoke_test.py
src/: config.rs  data.rs  db.rs  endpoints.rs  error.rs  import.rs  main.rs  migrate.rs  proxy.rs  s3_client.rs  toml_utils.rs
src/db/: migrate.rs  objects.rs
src/endpoints/: debug.rs  proxy.rs
src/import/: logging.rs  s3-crypto.rs  s3.rs
src/s3_client/: client.rs  crypto.rs
src/testing/: garage.rs
