[package]
name = "s3-tiering-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["full"] }
dialoguer = "0.12.0"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
hex = "0.4.3"
hmac = "0.12.1"
jiff = { version = "0.2.21", features = ["serde"] }
percent-encoding = "2.3.2"
quick-xml = { version = "0.39.2", features = ["serialize"] }
reqwest = { version = "0.13.2", features = ["rustls", "stream", "http2"] }
rootcause = "0.12.1"
rootcause-tracing = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full", "net"] }
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }

[lints]
rust.unsafe_code = { level = "deny", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"

[dev-dependencies]
ctor = "0.6.3"
testcontainers = { version = "0.27.1", features = ["http_wait"] }
